// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When there is a pageId renders correctly 1`] = `
<div
  render={[Function]}
  tags={
    Array [
      "free_game_main_text",
      "free_game_button_text",
      "free_game_button_url",
      "free_game_main_text_foo",
      "free_game_button_text_foo",
      "free_game_button_url_foo",
    ]
  }
>
  AdminText -
   
  <div
    caption={
      <Unknown
        difficulty="easy"
      />
    }
    confirmLeave={true}
    currentUser={
      Object {
        "id": 1,
        "name": "foo",
      }
    }
    leftIcon={<Unknown />}
    location="foo location"
  >
    Layout - 
    <h5
      className="MuiTypography-root-1 MuiTypography-h5-17 MuiTypography-alignCenter-24"
    >
      foo title
    </h5>
    <div
      product={
        Object {
          "image": "https://foo.image",
          "title": "foo title",
        }
      }
    >
      ProductImage - 
    </div>
    <a
      href="Foo free_game_button_url"
      rel="noopener noreferrer"
      style={
        Object {
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      <button
        className="MuiButtonBase-root-63 MuiButton-root-37 MuiButton-contained-48 MuiButton-raised-51 MuiButton-fullWidth-62"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "backgroundColor": "#76fc03",
          }
        }
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-38"
        >
          Foo free_game_button_text
        </span>
        <span
          className="MuiTouchRipple-root-66"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`When there is a product renders correctly 1`] = `
<div
  render={[Function]}
  tags={
    Array [
      "free_game_main_text",
      "free_game_button_text",
      "free_game_button_url",
    ]
  }
>
  AdminText -
   
  <div
    caption={
      <Unknown
        difficulty="easy"
      />
    }
    confirmLeave={true}
    currentUser={
      Object {
        "id": 1,
        "name": "foo",
      }
    }
    leftIcon={<Unknown />}
    location="foo location"
  >
    Layout - 
    <h5
      className="MuiTypography-root-1 MuiTypography-h5-17 MuiTypography-alignCenter-24"
    >
      foo title
    </h5>
    <div
      product={
        Object {
          "image": "https://foo.image",
          "title": "foo title",
        }
      }
    >
      ProductImage - 
    </div>
    <a
      href="Foo free_game_button_url"
      rel="noopener noreferrer"
      style={
        Object {
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      <button
        className="MuiButtonBase-root-63 MuiButton-root-37 MuiButton-contained-48 MuiButton-raised-51 MuiButton-fullWidth-62"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "backgroundColor": "#76fc03",
          }
        }
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-38"
        >
          Foo free_game_button_text
        </span>
        <span
          className="MuiTouchRipple-root-66"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`When there is no product renders correctly 1`] = `
<div
  render={[Function]}
  tags={
    Array [
      "free_game_main_text",
      "free_game_button_text",
      "free_game_button_url",
    ]
  }
>
  AdminText -
   
  <div
    caption={
      <Unknown
        difficulty="easy"
      />
    }
    confirmLeave={true}
    currentUser={
      Object {
        "id": 1,
        "name": "foo",
      }
    }
    leftIcon={<Unknown />}
    location="foo location"
  >
    Layout - 
    <h5
      className="MuiTypography-root-1 MuiTypography-h5-17 MuiTypography-alignCenter-24"
    >
      Foo free_game_main_text
    </h5>
    <div
      product={
        Object {
          "image": "cardi_placeholder.png",
        }
      }
    >
      ProductImage - 
    </div>
    <a
      href="Foo free_game_button_url"
      rel="noopener noreferrer"
      style={
        Object {
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      <button
        className="MuiButtonBase-root-63 MuiButton-root-37 MuiButton-contained-48 MuiButton-raised-51 MuiButton-fullWidth-62"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "backgroundColor": "#76fc03",
          }
        }
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-38"
        >
          Foo free_game_button_text
        </span>
        <span
          className="MuiTouchRipple-root-66"
        />
      </button>
    </a>
  </div>
</div>
`;
